# spectronaut-webui

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
doc/: CONFIG.md  INSTALLATION.md  USAGE.md  config.json.example
spectronaut_webui/: config.py  helpers.py  main.py  widgets.py
