[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectronaut-webui"
version = "0.1.0"
description = "NiceGUI-based web interface for Spectronaut proteomics software"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Vladimir Gorshkov"}
]
keywords = [
    "spectronaut",
    "proteomics",
    "gui",
    "nicegui",
    "web-interface"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "nicegui>=3.0.0",
    "pandas>=2.0.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/caetera/spectronaut-webui"
Documentation = "https://github.com/caetera/spectronaut-webui#readme"
Repository = "https://github.com/caetera/spectronaut-webui.git"
Issues = "https://github.com/caetera/spectronaut-webui/issues"

[project.scripts]
spectronaut-ui = "spectronaut_webui.main:main"
spectronaut-ui-config = "spectronaut_webui.config:generate_config_cli"

[tool.setuptools]
packages = ["spectronaut_webui"]

[tool.setuptools.package-data]
spectronaut_ucloud_ui = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["spectronaut_ucloud_ui"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
